@@ -49,6 +49,9 @@ int writeDifxLine3(FILE *out, const char *key, int i1, int i2, int i3,
 	const char *value);
 
 
+int writeDifxLineBoolean(FILE *out, const char *key, int value);
+
+
 int writeDifxLineInt(FILE *out, const char *key, int value);
 
 int writeDifxLineInt1(FILE *out, const char *key, int i1, int value);
