@@ -1,6 +1,7 @@
 2.11
 * Post DiFX-1.5
 * Implement profile mode (with mode=profile at the global level)
+* Add writeDifxLineBoolean and use it for writing TRUE/FALSE values
 
 2.10
 * Deallocation option of function DifxBaselineAllocPolProds()
